--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,4 +34,6 @@ rosbuild_add_executable(sd_controller src/sd_controller.cpp)
 rosbuild_add_executable(md_controller src/md_controller.cpp)
 rosbuild_add_executable(dummycontrollernode_multiple_devices src/dummycontrollernode_multiple_devices.cpp)
 rosbuild_add_executable(ros_canopenmasternode src/ros_canopenmasternode.cpp)
+rosbuild_add_executable(ros_canopenmasternode1 src/ros_canopenmasternode1.cpp)
 target_link_libraries(ros_canopenmasternode boost_system boost_filesystem pthread canopen pcan yaml-cpp)
+target_link_libraries(ros_canopenmasternode1 boost_system boost_filesystem pthread canopen pcan yaml-cpp)
